--- a/Fracy.html
+++ b/Fracy.html
@@ -1,5 +1,3 @@
-input.<i class="fa fa-html5
-" aria-hidden="true"></i>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -98,7 +96,7 @@ input.<i class="fa fa-html5
         </div>
     </div>
 
-    <!-- The JavaScript logic you provided -->
+    <!-- The JavaScript logic -->
     <script>
         // Use an anonymous function to keep code clean and prevent global variable pollution.
         // The IIFE pattern is a good way to achieve this.
